--- a/plugin.xml
+++ b/plugin.xml
@@ -6,9 +6,8 @@
 	</name>
 	<author>
 		<lang name="default">Chiffa</lang>
-		<lang name="russian">Chiffa</lang>
 	</author>
-	<homepage>http://ars-team.ru</homepage>
+	<homepage>http://goweb.pro</homepage>
 	<version>1.0</version>
 	<requires>
 		<livestreet>1.0</livestreet>
