--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
     <author>
         <lang name="default">Chiffa</lang>
     </author>
-    <homepage>http://ls.goweb.pro/plugin-userstatus</homepage>
+    <homepage>http://goweb.pro</homepage>
     <version>2.0.0</version>
     <requires>
         <livestreet>2.0.*</livestreet>
